--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ layout: default
 	    {% elsif page == 1 %}
 	      <a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
 	    {% else %}
-	      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+	      <a href="/{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
 	    {% endif %}
 	  {% endfor %}
 
 	  {% if paginator.next_page %}
-	    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">下一页 &raquo;</a>
+	    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}/">下一页 &raquo;</a>
 	  {% else %}
 	    <span>下一页 &raquo;</span>
 	  {% endif %}
