--- a/3-tags.html
+++ b/3-tags.html
@@ -46,7 +46,7 @@ permalink: /tags/
       function scroll() {
         var hash = location.hash.replace('#','');
         if(hash !== '') {
-          $('html,body').animate({scrollTop:$('div[_id='+hash+']').offset().top-86}, 500);
+          $('html,body').animate({scrollTop:$('div[_id="'+hash+'"]').offset().top-86}, 500);
         }
       }
     </script>
