--- a/4-tags.html
+++ b/4-tags.html
@@ -11,12 +11,11 @@ permalink: /tags/
 
     {% include header.html %}
 
-    <div class="page-content">
-      {% include sidebar.html %}
-      <div class="wrapper">
-        <div class="category-title">
-          <h1>{{ page.title }}</h1>
-          <span>(共{{ site.tags.size }}个标签)</span>
+    <div class="container">
+
+      <div class="col-md-9">
+        <div class="page-header">
+          <h1>{{ page.title }}<small>(共{{ site.tags.size }}个标签)</small></h1>
         </div>
         <div class="tag-list">
         {% for tag in site.tags %}
@@ -34,6 +33,7 @@ permalink: /tags/
         {% endfor %}
         </div>
       </div>
+      {% include sidebar.html %}
     </div>
 
     {% include footer.html %}
