--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
     {% if paginator.total_pages > 1 %}
 	<div class="pagination">
 	  {% if paginator.previous_page %}
-	    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; 上一页</a>
+	    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}/">&laquo; 上一页</a>
 	  {% else %}
 	    <span>&laquo; 上一页</span>
 	  {% endif %}
