--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@ layout: default
         {% endfor %}
     </div>
 
+{{ paginator.page }}
     {% if paginator.total_pages > 1 %}
 	<div class="pagination">
 	  {% if paginator.previous_page %}
-	    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}/">&laquo; 上一页</a>
+      {% if paginator.page == 2 %}
+      <a href="/">&laquo; 上一页</a>
+      {% else %}
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}/">&laquo; 上一页</a>
+      {% endif %}
 	  {% else %}
 	    <span>&laquo; 上一页</span>
 	  {% endif %}
