--- a/4-tags.html
+++ b/4-tags.html
@@ -11,7 +11,7 @@ permalink: /tags/
 
     {% include header.html %}
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="col-md-9">
         <div class="page-header">
